feat: adding last check result for a monitor
